# tagent

./: .gitignore  Cargo.toml  Makefile  README.md  openapi.yml  settings.yaml
.github/workflows/: rust.yml
tagent/: .env  Cargo.toml  jwt.example  private.example  public.example  tagent.db
tagent/migrations/2022-02-19-221812_create_acls/: down.sql  up.sql
tagent/migrations/2022-02-25-020745_acls_0.1/: up.sql
tagent/src/: auth.rs  config.rs  db.rs  handlers.rs  jobs.rs  main.rs  models.rs  representations.rs  schema.rs
