[package]
name = "tagent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1"
actix-files = "0.5.0"
actix-multipart = "0.3"
futures = "0.3.5"
async-std = "1.8.0"
sanitize-filename = "0.3"
env_logger = "0.9"
log = "0.4"
reqwest  = {version = "0.11", features = ["json"]}
jwt-simple = "0.10"

