[package]
name = "tagent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.3"
serde = "1"
serde_json = "1"
actix-files = "0.6.0-beta.16"
actix-multipart = "0.4.0-beta.13"
futures = "0.3.5"
async-std = "1.8.0"
sanitize-filename = "0.3"
env_logger = "0.9"
log = "0.4"
reqwest  = {version = "0.11", features = ["json"]}
jwt-simple = "0.10"
dotenv = "0.15"
uuid = { version = "0.8", features = ["v4"] }
rsa = "0.5.0"
tempfile = "3.3.0"


